--- a/resume/index.css
+++ b/resume/index.css
@@ -64,22 +64,39 @@ li{
 
 .h2{
     width:100%;
-    margin: 3rem 0;
+    margin-top:3rem;
     border-top:1px solid #070707;
     border-bottom: 1px solid #070707;
 }
 
 h2{
+    
     margin : 12px 0 12px 2rem;
     
 }
 
 .h3{
+    font-weight: 700;
+    color: #888;
+    margin: 1rem 0;
     width:100%;
 }
 
+.h3 p{
+    font-size: 18px;
+    margin:0;
+    margin-left:2rem;
+}
+
 h3{
+    margin:1rem;
+    font-size: 32px;
     margin-bottom: 12px;
+}
+
+.h4{
+    margin-left: 1rem;
+    width:100%;
 }
 
 h4{
@@ -105,11 +122,13 @@ main{
     border-radius: 12px;
     overflow:hidden;
 }
-
+p{
+    margin: 1rem 0;
+}
 section{
     display: flex;
     flex-direction: column;
-    gap:5rem;
+    gap:2.5rem;
 }
 
 article{
@@ -144,6 +163,7 @@ article{
     display: none;
 }
 .grid-col-3{
+    margin-top:2rem;
     display:grid;
     grid-template-columns: repeat(3,1fr);
     gap: 5rem;
@@ -177,6 +197,7 @@ article{
     left: 130%;
     background:#ddd;
 }
+
 
 .archive ul {
     margin-left: 3rem;
@@ -229,6 +250,18 @@ article{
     grid-gap: 2rem;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+}
+.img_container{
+    display:flex;
+    width:100%;
+}
+
+.profile p{
+    margin: 0;
+}
+
+span.small{
+    font-size: 15px;
 }
 
 @media screen and (max-width: 820px) {
