--- a/resume/index.css
+++ b/resume/index.css
@@ -234,7 +234,7 @@ article{
 }
 .grid{
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 55% 45%;
     grid-column-gap: 3rem;
     grid-row-gap: 2rem;
     padding : 0 1rem;
