--- a/resume/index.css
+++ b/resume/index.css
@@ -16,6 +16,8 @@
 }
 
 :root{
+    width:100%;
+    margin:auto;
     --base-color:#fff;
     --bg-h2-color:rgb(231, 231, 231);
     --dark-color:#010101;
@@ -70,7 +72,6 @@ li{
 }
 
 h2{
-    
     margin : 12px 0 12px 2rem;
     
 }
@@ -107,7 +108,7 @@ h4{
 main{
     display: flex;
     flex-direction: column;
-    max-width: 80rem;
+    max-width: 95rem; 
     padding: 1rem;
     margin: 7rem auto;
 }
@@ -234,7 +235,8 @@ article{
 }
 .grid{
     display:grid;
-    width:100%;
+    width:83%;
+    
     grid-template-columns: 57% 43%;
     grid-column-gap: 3rem;
     grid-row-gap: 2rem;
@@ -254,6 +256,10 @@ article{
 }
 .img_container{
     display:flex;
+    width:100%;
+}
+
+.img_container>div{
     width:100%;
 }
 
